fix all errors && added conditional messages

--- a/src/components/container/container.css
+++ b/src/components/container/container.css
@@ -34,7 +34,7 @@
   padding: 1rem;
   cursor: pointer;
 }
-.notFound__listitem {
+.messsage__container {
   padding: 1rem;
   text-align: center;
 }
