--- a/src/components/container/container.css
+++ b/src/components/container/container.css
@@ -5,7 +5,7 @@
   max-width: 1024px;
 }
 .auto-complete {
-  width: 50%;
+  max-width: 50%;
   margin: 0 auto;
   margin-top: 3rem;
 }
@@ -28,6 +28,8 @@
   border-radius: 6px;
   margin-top: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.125);
+  max-height: 23rem;
+  overflow-y: scroll;
 }
 
 .list__item {
@@ -40,4 +42,21 @@
 }
 .list__item:hover {
   background-color: hsl(0deg 0% 89.76%);
+}
+.selected-items {
+  width: 100%;
+  max-height: 10rem;
+  overflow: scroll;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.selected-items__pill {
+  padding: 0.3rem 0.9rem;
+  border-radius: 15px;
+  background-color: #efe8ff;
+  border-color: #efe8ff;
+  color: #9c6efc;
+  margin: 5px;
 }
